# libigl-link-example

./: CMakeLists.txt  README.md  main.cpp
cmake/: FindLIBIGL.cmake
